# console

./: .gitignore  CMakeLists.txt  README.md  clang-format.cmake  cppcheck.cmake
Debug/: CMakeCache.txt  Makefile  client  cmake_install.cmake  server
Release/: CMakeCache.txt  Makefile  client  cmake_install.cmake  server
src/client/: CMakeLists.txt  client.cpp  config.h
src/server/: config.h  pars_line.cpp  pars_line.h  parse_line.cpp  parse_line.h  server.cpp
src/test/: test.cpp
